# webgpuAndWebAssembly

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
artifacts/: implementation_plan.md  task.md  walkthrough.md
public/assets/boats/npc/: boat.mtl
src/: main.ts  style.css
src/game/: avatar.ts  hud.ts  input.ts  npcBoat.ts  player.ts  sails.ts  types.ts  waves.ts
src/render/: hullMaterial.ts  ocean.wgsl  waterMaterial.ts
src/wasm/: Cargo.toml  oceanFallback.ts  physicsWorker.ts  test.rs
src/wasm/src/: lib.rs  ocean.rs  physics.rs
