[workspace]

[package]
name = "ocean_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
glam = "0.27"
rapier3d-f64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
noise = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
